--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
@@ -13,6 +14,15 @@
     "express-winston": "^0.2.9",
     "lodash": "^2.4.1",
     "serve-favicon": "~2.1.3",
+    "webpac": "^1.0.1",
+    "webpack": "^4.12.0",
     "winston": "^0.8.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack-cli": "^3.0.3",
+    "webpack-command": "^0.2.1"
   }
 }
